large update, post internship

--- a/notebooks/cp-eigenvalues.ipynb
+++ b/notebooks/cp-eigenvalues.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -19,19 +19,19 @@
      "output_type": "stream",
      "text": [
       "======= A =======\n",
-      "[[1.         0.10506407 0.         0.        ]\n",
-      " [0.         1.10296279 0.         0.        ]\n",
-      " [0.         0.         1.10975078 0.10363227]\n",
+      "[[1.         0.1        0.00498867 0.00243783]\n",
+      " [0.         1.         0.10155962 0.00498867]\n",
+      " [0.         0.         1.10975078 0.21149443]\n",
       " [0.         0.         2.23431172 1.10975078]]\n",
-      "[1.59094387 0.62855769 1.         1.10296279]\n",
+      "[1.         1.         1.79716948 0.42233208]\n",
       "======= A - BK =======\n",
-      "[[ 0.        ]\n",
-      " [ 0.10506407]\n",
-      " [ 0.        ]\n",
+      "[[ 0.00544632]\n",
+      " [ 0.09966979]\n",
+      " [-0.01018096]\n",
       " [-0.20726454]]\n",
-      "[[-16.69013967 -19.88541266 -94.22811357 -20.29149176]]\n",
-      "[0.54  0.55  0.556 0.56 ]\n",
-      "[0.54  0.55  0.556 0.56 ]\n"
+      "[[ -0.04926718  -0.16348671 -13.15347572  -3.14645973]]\n",
+      "[0.75 0.89 0.9  0.91]\n",
+      "[0.75 0.89 0.9  0.91]\n"
      ]
     }
    ],
@@ -49,19 +49,23 @@
     "b = g*(m_c+m_p)/(l*m_c) #21.56\n",
     "sqrtb = np.sqrt(b)\n",
     "tau = 0.1\n",
-    "e_a_tau = np.exp(a*tau)\n",
+    "# e_a_tau = np.exp(a*tau)\n",
     "e_sqrtb_tau = np.exp(sqrtb*tau)\n",
     "e_2sqrtb_tau = np.exp(2*sqrtb*tau)\n",
     "e_negb_tau = np.exp(-sqrtb*tau)\n",
     "\n",
-    "A_12 = 2*(e_a_tau-1)/a\n",
-    "A_22 = 2*e_a_tau\n",
-    "A_33 =e_negb_tau*(e_2sqrtb_tau + 1)\n",
-    "A_34 = e_negb_tau*(e_2sqrtb_tau-1)/sqrtb\n",
-    "A_43 = sqrtb*e_negb_tau*(e_2sqrtb_tau-1)\n",
-    "A_44 = e_negb_tau*(e_2sqrtb_tau + 1)\n",
-    "A = 0.5*np.array([[2, A_12, 0, 0],\n",
-    "         [0, A_22, 0, 0],\n",
+    "A_12 = tau\n",
+    "A_13 = (a/(2*b))*e_negb_tau*(e_sqrtb_tau-1)**2\n",
+    "A_14 = (a/(2*b**(3/2)))*e_negb_tau*(-1*sqrtb*tau*e_sqrtb_tau+e_2sqrtb_tau-1)\n",
+    "A_22 = (a/(2*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_23 = (a/(2*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_24 = (a/(2*b))*e_negb_tau*(e_sqrtb_tau-1)**2\n",
+    "A_33 = (1/(2))*e_negb_tau*(e_2sqrtb_tau+1)\n",
+    "A_34 = (1/(a*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_43 = (sqrtb/(2))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_44 = (1/2)*e_negb_tau*(e_2sqrtb_tau+1)\n",
+    "A = np.array([[1, A_12, A_13, A_14],\n",
+    "         [0, 1, A_23, A_24],\n",
     "         [0, 0, A_33, A_34],\n",
     "         [0, 0, A_43, A_44]])\n",
     "print(\"======= A =======\")\n",
@@ -76,16 +80,21 @@
     "#               [-1/(l*m_c)]])\n",
     "\n",
     "\n",
-    "B_2_f = lambda x: (1/m_c)*np.exp(a*x)\n",
-    "B_4_f = lambda x: (-1/(2*l*m_c))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)+1)\n",
+    "B_1_f = lambda x: (x/m_c)-(a/(l*m_c*2*b**(3/2)))*np.exp(-np.sqrt(b)*x)*(-2*sqrtb*tau*np.exp(np.sqrt(b)*x)+np.exp(2*np.sqrt(b)*x)-1)\n",
+    "B_2_f = lambda x: (1/m_c)-(a/(l*m_c*2*b))*np.exp(-np.sqrt(b)*x)*(np.exp(np.sqrt(b)*x)-1)**2\n",
+    "B_3_f = lambda x: -(1/(l*m_c*2*sqrtb))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)-1)\n",
+    "B_4_f = lambda x: -(1/(l*m_c*2))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)+1)\n",
+    "B_1 = integrate.quad(B_1_f, 0, tau)[0]\n",
     "B_2 = integrate.quad(B_2_f, 0, tau)[0]\n",
+    "B_3 = integrate.quad(B_3_f, 0, tau)[0]\n",
     "B_4 = integrate.quad(B_4_f, 0, tau)[0]\n",
-    "B = np.array([[0],\n",
+    "B = np.array([[B_1],\n",
     "              [B_2],\n",
-    "              [0],\n",
+    "              [B_3],\n",
     "              [B_4]])\n",
     "print(B)\n",
-    "requested_poles = np.array([0.55, 0.54, 0.56, 0.556])\n",
+    "requested_poles = np.array([0.9, 0.91, 0.89, 0.75])\n",
+    "\n",
     "# requested_poles = np.array([0.8, 0.82, 0.84, 0.86])\n",
     "\n",
     "out = signal.place_poles(A, B, requested_poles)\n",
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,19 +113,19 @@
      "output_type": "stream",
      "text": [
       "======= A =======\n",
-      "[[1.         0.12904413 0.         0.        ]\n",
-      " [0.         1.63231622 0.         0.        ]\n",
-      " [0.         0.         1.30869134 0.11009219]\n",
-      " [0.         0.         6.47342058 1.30869134]]\n",
-      "[2.15289098 0.4644917  1.         1.63231622]\n",
+      "[[1.00000000e+00 1.00000000e-01 2.57242785e-02 5.00768223e-03]\n",
+      " [0.00000000e+00 1.00000000e+00 5.39451715e-01 2.57242785e-02]\n",
+      " [0.00000000e+00 0.00000000e+00 1.30869134e+00 4.49355864e-02]\n",
+      " [0.00000000e+00 0.00000000e+00 6.47342058e+00 1.30869134e+00]]\n",
+      "[1.         1.         1.84803071 0.76935198]\n",
       "======= A - BK =======\n",
-      "[[ 0.        ]\n",
-      " [ 0.12904413]\n",
-      " [ 0.        ]\n",
+      "[[ 0.00658338]\n",
+      " [ 0.09663594]\n",
+      " [-0.02099941]\n",
       " [-0.44036875]]\n",
-      "[[  -8.74102877  -39.70026499 -151.77476708  -19.79428599]]\n",
-      "[-1.50213175e-13  5.40000000e-01  5.56000000e-01  5.60000000e-01]\n",
-      "[0.    0.54  0.556 0.56 ]\n"
+      "[[ -0.09490195  -0.28869755 -20.8180347   -1.72296412]]\n",
+      "[0.75 0.89 0.9  0.91]\n",
+      "[0.75 0.89 0.9  0.91]\n"
      ]
     }
    ],
@@ -134,41 +143,46 @@
     "e_sqrtb_tau = np.exp(sqrtb*tau)\n",
     "e_2sqrtb_tau = np.exp(2*sqrtb*tau)\n",
     "e_negb_tau = np.exp(-sqrtb*tau)\n",
-    "\n",
-    "A_12 = 2*(e_a_tau-1)/a\n",
-    "A_22 = 2*e_a_tau\n",
-    "A_33 =e_negb_tau*(e_2sqrtb_tau + 1)\n",
-    "A_34 = e_negb_tau*(e_2sqrtb_tau-1)/sqrtb\n",
-    "A_43 = sqrtb*e_negb_tau*(e_2sqrtb_tau-1)\n",
-    "A_44 = e_negb_tau*(e_2sqrtb_tau + 1)\n",
-    "A = 0.5*np.array([[2, A_12, 0, 0],\n",
-    "         [0, A_22, 0, 0],\n",
+    "A_12 = tau\n",
+    "A_13 = (a/(2*b))*e_negb_tau*(e_sqrtb_tau-1)**2\n",
+    "A_14 = (a/(2*b**(3/2)))*e_negb_tau*(-1*sqrtb*tau*e_sqrtb_tau+e_2sqrtb_tau-1)\n",
+    "A_22 = (a/(2*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_23 = (a/(2*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_24 = (a/(2*b))*e_negb_tau*(e_sqrtb_tau-1)**2\n",
+    "A_33 = (1/(2))*e_negb_tau*(e_2sqrtb_tau+1)\n",
+    "A_34 = (1/(a*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_43 = (sqrtb/(2))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_44 = (1/2)*e_negb_tau*(e_2sqrtb_tau+1)\n",
+    "A = np.array([[1, A_12, A_13, A_14],\n",
+    "         [0, 1, A_23, A_24],\n",
     "         [0, 0, A_33, A_34],\n",
     "         [0, 0, A_43, A_44]])\n",
-    "\n",
     "print(\"======= A =======\")\n",
     "print(A)\n",
     "print(np.linalg.eigvals(A))\n",
     "\n",
     "# Now, we need to compute the B matrix for A-BK\n",
     "print(\"======= A - BK =======\")\n",
-    "# continuous time B\n",
     "# B = np.array([[0],\n",
     "#               [1/m_c],\n",
     "#               [0],\n",
     "#               [-1/(l*m_c)]])\n",
     "\n",
-    "B_2_f = lambda x: (1/m_c)*np.exp(a*x)\n",
-    "B_4_f = lambda x: (-1/(2*l*m_c))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)+1)\n",
-    "B_2 = integrate.quad(B_2_f, 0, tau)[0]\n",
-    "B_4 = integrate.quad(B_4_f, 0, tau)[0]\n",
-    "B = np.array([[0],\n",
-    "              [B_2],\n",
-    "              [0],\n",
-    "              [B_4]])\n",
     "\n",
+    "B_1_f = lambda x: (x/m_c)-(a/(l*m_c*2*b**(3/2)))*np.exp(-np.sqrt(b)*x)*(-2*sqrtb*tau*np.exp(np.sqrt(b)*x)+np.exp(2*np.sqrt(b)*x)-1)\n",
+    "B_2_f = lambda x: (1/m_c)-(a/(l*m_c*2*b))*np.exp(-np.sqrt(b)*x)*(np.exp(np.sqrt(b)*x)-1)**2\n",
+    "B_3_f = lambda x: -(1/(l*m_c*2*sqrtb))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)-1)\n",
+    "B_4_f = lambda x: -(1/(l*m_c*2))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)+1)\n",
+    "B_1 = integrate.quad(B_1_f, 0, tau)[0]\n",
+    "B_2 = integrate.quad(B_2_f, 0, tau)[0]\n",
+    "B_3 = integrate.quad(B_3_f, 0, tau)[0]\n",
+    "B_4 = integrate.quad(B_4_f, 0, tau)[0]\n",
+    "B = np.array([[B_1],\n",
+    "              [B_2],\n",
+    "              [B_3],\n",
+    "              [B_4]])\n",
     "print(B)\n",
-    "requested_poles = np.array([0, 0.54, 0.56, 0.556])\n",
+    "requested_poles = np.array([0.9, 0.91, 0.89, 0.75])\n",
     "# requested_poles = np.array([0.8, 0.82, 0.84, 0.86])\n",
     "\n",
     "out = signal.place_poles(A, B, requested_poles)\n",
@@ -179,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -187,19 +201,19 @@
      "output_type": "stream",
      "text": [
       "======= A =======\n",
-      "[[1.         0.10249051 0.         0.        ]\n",
-      " [0.         1.05022035 0.         0.        ]\n",
-      " [0.         0.         1.0518927  0.10172385]\n",
+      "[[1.         0.1        0.00247108 0.00246304]\n",
+      " [0.         1.         0.04984468 0.00247108]\n",
+      " [0.         0.         1.0518927  0.41519937]\n",
       " [0.         0.         1.04673837 1.0518927 ]]\n",
-      "[1.37820275 0.72558264 1.         1.05022035]\n",
+      "[1.         1.         1.71113856 0.39264684]\n",
       "======= A - BK =======\n",
-      "[[ 0.        ]\n",
-      " [ 0.05124526]\n",
-      " [ 0.        ]\n",
+      "[[ 0.00261802]\n",
+      " [ 0.04995896]\n",
+      " [-0.00252151]\n",
       " [-0.05086192]]\n",
-      "[[ -577.75872378  -360.65603003 -1455.30718064  -434.35078994]]\n",
-      "[-5.560000e-01 -1.045838e-12  5.400000e-01  5.600000e-01]\n",
-      "[-0.556  0.     0.54   0.56 ]\n"
+      "[[ -0.10939722  -0.36581336 -25.50751584 -11.95452197]]\n",
+      "[0.75 0.89 0.9  0.91]\n",
+      "[0.75 0.89 0.9  0.91]\n"
      ]
     }
    ],
@@ -218,40 +232,47 @@
     "e_2sqrtb_tau = np.exp(2*sqrtb*tau)\n",
     "e_negb_tau = np.exp(-sqrtb*tau)\n",
     "\n",
-    "A_12 = 2*(e_a_tau-1)/a\n",
-    "A_22 = 2*e_a_tau\n",
-    "A_33 =e_negb_tau*(e_2sqrtb_tau + 1)\n",
-    "A_34 = e_negb_tau*(e_2sqrtb_tau-1)/sqrtb\n",
-    "A_43 = sqrtb*e_negb_tau*(e_2sqrtb_tau-1)\n",
-    "A_44 = e_negb_tau*(e_2sqrtb_tau + 1)\n",
-    "A = 0.5*np.array([[2, A_12, 0, 0],\n",
-    "         [0, A_22, 0, 0],\n",
+    "A_12 = tau\n",
+    "A_13 = (a/(2*b))*e_negb_tau*(e_sqrtb_tau-1)**2\n",
+    "A_14 = (a/(2*b**(3/2)))*e_negb_tau*(-1*sqrtb*tau*e_sqrtb_tau+e_2sqrtb_tau-1)\n",
+    "A_22 = (a/(2*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_23 = (a/(2*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_24 = (a/(2*b))*e_negb_tau*(e_sqrtb_tau-1)**2\n",
+    "A_33 = (1/(2))*e_negb_tau*(e_2sqrtb_tau+1)\n",
+    "A_34 = (1/(a*sqrtb))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_43 = (sqrtb/(2))*e_negb_tau*(e_2sqrtb_tau-1)\n",
+    "A_44 = (1/2)*e_negb_tau*(e_2sqrtb_tau+1)\n",
+    "A = np.array([[1, A_12, A_13, A_14],\n",
+    "         [0, 1, A_23, A_24],\n",
     "         [0, 0, A_33, A_34],\n",
     "         [0, 0, A_43, A_44]])\n",
-    "\n",
     "print(\"======= A =======\")\n",
     "print(A)\n",
     "print(np.linalg.eigvals(A))\n",
     "\n",
     "# Now, we need to compute the B matrix for A-BK\n",
     "print(\"======= A - BK =======\")\n",
-    "# continuous time B\n",
     "# B = np.array([[0],\n",
     "#               [1/m_c],\n",
     "#               [0],\n",
     "#               [-1/(l*m_c)]])\n",
     "\n",
-    "B_2_f = lambda x: (1/m_c)*np.exp(a*x)\n",
-    "B_4_f = lambda x: (-1/(2*l*m_c))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)+1)\n",
-    "B_2 = integrate.quad(B_2_f, 0, tau)[0]\n",
-    "B_4 = integrate.quad(B_4_f, 0, tau)[0]\n",
-    "B = np.array([[0],\n",
-    "              [B_2],\n",
-    "              [0],\n",
-    "              [B_4]])\n",
     "\n",
+    "B_1_f = lambda x: (x/m_c)-(a/(l*m_c*2*b**(3/2)))*np.exp(-np.sqrt(b)*x)*(-2*sqrtb*tau*np.exp(np.sqrt(b)*x)+np.exp(2*np.sqrt(b)*x)-1)\n",
+    "B_2_f = lambda x: (1/m_c)-(a/(l*m_c*2*b))*np.exp(-np.sqrt(b)*x)*(np.exp(np.sqrt(b)*x)-1)**2\n",
+    "B_3_f = lambda x: -(1/(l*m_c*2*sqrtb))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)-1)\n",
+    "B_4_f = lambda x: -(1/(l*m_c*2))*np.exp(-np.sqrt(b)*x)*(np.exp(2*np.sqrt(b)*x)+1)\n",
+    "B_1 = integrate.quad(B_1_f, 0, tau)[0]\n",
+    "B_2 = integrate.quad(B_2_f, 0, tau)[0]\n",
+    "B_3 = integrate.quad(B_3_f, 0, tau)[0]\n",
+    "B_4 = integrate.quad(B_4_f, 0, tau)[0]\n",
+    "B = np.array([[B_1],\n",
+    "              [B_2],\n",
+    "              [B_3],\n",
+    "              [B_4]])\n",
     "print(B)\n",
-    "requested_poles = np.array([0, 0.54, 0.56, -0.556])\n",
+    "requested_poles = np.array([0.9, 0.91, 0.89, 0.75])\n",
+    "\n",
     "# requested_poles = np.array([0.8, 0.82, 0.84, 0.86])\n",
     "\n",
     "out = signal.place_poles(A, B, requested_poles)\n",
